--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.2",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.2",
-    "reduxsauce": "^1.0.1"
+    "redux-thunk": "^2.3.0",
+    "reduxsauce": "^1.0.1",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
