--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "jest": "^24.5.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.16.4",
+    "react-native-debugger-open": "^0.3.22",
     "react-native-rename": "^2.4.1",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.6",
+    "remote-redux-devtools": "^0.5.16",
+    "remote-redux-devtools-on-debugger": "^0.8.3"
   },
   "jest": {
     "preset": "react-native",
